--- a/superadmin/admin-pusat/index.html
+++ b/superadmin/admin-pusat/index.html
@@ -225,9 +225,7 @@
                     </div>
                     <ul class="p-2 text-sm">
                         <li><a href="../user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a></li>
-                        <li><a href="../user/settings.html" class="block p-2 hover:bg-purple-200 rounded">Pengaturan</a>
-                        </li>
-                        <li><a href="../../auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a>
+                        <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a>
                         </li>
                     </ul>
                 </div>
