--- a/superadmin/index.html
+++ b/superadmin/index.html
@@ -145,12 +145,9 @@
                         </div>
                         <ul class="p-2 text-sm">
                             <!-- Menu Profile -->
-                            <li><a href="../user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
+                            <li><a href="./user/profile.html" class="block p-2 hover:bg-purple-200 rounded">Profil</a>
                             </li>
-                            <li><a href="../user/settings.html"
-                                    class="block p-2 hover:bg-purple-200 rounded">Pengaturan</a>
-                            </li>
-                            <li><a href="../../auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a>
+                            <li><a href="/auth/login.html" class="block p-2 hover:bg-purple-200 rounded">Keluar</a>
                             </li>
                         </ul>
                     </div>
@@ -185,7 +182,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../admin-pusat/index.html"
+                    <a href="./admin-pusat/index.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -197,7 +194,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="../support/help.html"
+                    <a href="./support/help.html"
                         class="flex items-center px-2 py-1.5 text-gray-500 rounded-lg hover:bg-purple-100 hover:text-indigo-600 transition-colors group">
                         <svg class="shrink-0 w-5 h-5 transition duration-75 group-hover:text-indigo-600"
                             aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none"
@@ -539,52 +536,6 @@
                                 <i class="fas fa-arrow-right mr-2"></i> Kelola Semua Admin
                             </a>
                         </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Additional Stats -->
-            <div class="bg-white rounded-xl shadow-sm border p-4 md:p-6 mb-6">
-                <h2 class="text-lg md:text-xl font-bold text-gray-900 mb-4 md:mb-6 card-title">Statistik Detail</h2>
-
-                <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6">
-                    <div class="bg-gray-50 p-4 rounded-lg">
-                        <div class="flex items-center mb-3">
-                            <div class="p-2 rounded-lg bg-indigo-50 text-indigo-600 mr-3">
-                                <i class="fas fa-sign-in-alt"></i>
-                            </div>
-                            <div>
-                                <p class="text-sm text-gray-500">Login Hari Ini</p>
-                                <p class="font-bold text-gray-900 text-xl">8 Admin</p>
-                            </div>
-                        </div>
-                        <p class="text-xs text-gray-500">Rata-rata: 10 login/hari</p>
-                    </div>
-
-                    <div class="bg-gray-50 p-4 rounded-lg">
-                        <div class="flex items-center mb-3">
-                            <div class="p-2 rounded-lg bg-emerald-50 text-emerald-600 mr-3">
-                                <i class="fas fa-tasks"></i>
-                            </div>
-                            <div>
-                                <p class="text-sm text-gray-500">Aksi Dilakukan</p>
-                                <p class="font-bold text-gray-900 text-xl">47 Aksi</p>
-                            </div>
-                        </div>
-                        <p class="text-xs text-gray-500">Hari ini (hingga saat ini)</p>
-                    </div>
-
-                    <div class="bg-gray-50 p-4 rounded-lg">
-                        <div class="flex items-center mb-3">
-                            <div class="p-2 rounded-lg bg-amber-50 text-amber-600 mr-3">
-                                <i class="fas fa-clock"></i>
-                            </div>
-                            <div>
-                                <p class="text-sm text-gray-500">Rata-rata Waktu</p>
-                                <p class="font-bold text-gray-900 text-xl">3.2 menit</p>
-                            </div>
-                        </div>
-                        <p class="text-xs text-gray-500">Per sesi admin</p>
                     </div>
                 </div>
             </div>
