--- a/kab-kota/susun/index.html
+++ b/kab-kota/susun/index.html
@@ -473,6 +473,7 @@
             return 0;
         }
 
+
         // RTKD Projects Data for Kab/Kota - One RTKD per period (newest first)
         const projectsData = [
             { name: 'RTKD Kota Jakarta Barat 2025-2029', period: '2025-2029', leader: 'Ir. Agus Prasetyo', created: '2024-03-01', completed: '2029-12-31', duration: '60 bulan' },
@@ -530,7 +531,7 @@
             $('#projectsTable').DataTable({
                 data: tableData,
                 pageLength: 10,
-                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
+                order: [[1, 'desc']], // Sort by Proyek Dibuat (column 1) descending - newest first
                 language: {
                     search: "Cari:",
                     lengthMenu: "Tampilkan _MENU_ data per halaman",
@@ -543,12 +544,10 @@
                         next: "Selanjutnya",
                         previous: "Sebelumnya"
                     },
-                    zeroRecords: "Tidak ada project yang ditemukan",
-                    emptyTable: "Tidak ada project tersedia"
+                    zeroRecords: "Tidak ada data yang ditemukan"
                 },
-                order: [[0, 'asc']],
                 columnDefs: [
-                    { orderable: false, targets: [5, 6] }
+                    { orderable: false, targets: 6 } // Disable sorting on the last column (Aksi)
                 ]
             });
         });
