--- a/provinsi/susun/index.html
+++ b/provinsi/susun/index.html
@@ -473,6 +473,7 @@
             return 0;
         }
 
+
         // RTKD Projects Data - One RTKD per period (newest first)
         const projectsData = [
             { name: 'RTKD Provinsi DKI Jakarta 2025-2029', period: '2025-2029', leader: 'Dr. Ahmad Suryadi', created: '2024-02-01', completed: '2029-12-31', duration: '60 bulan' },
@@ -531,6 +532,7 @@
                 data: tableData,
                 pageLength: 10,
                 lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Semua"]],
+                order: [[1, 'desc']], // Sort by Proyek Dibuat (column 1) descending - newest first
                 language: {
                     search: "Cari:",
                     lengthMenu: "Tampilkan _MENU_ data per halaman",
@@ -546,7 +548,6 @@
                     zeroRecords: "Tidak ada project yang ditemukan",
                     emptyTable: "Tidak ada project tersedia"
                 },
-                order: [[0, 'asc']],
                 columnDefs: [
                     { orderable: false, targets: [5, 6] }
                 ]
