--- a/pusat/index.html
+++ b/pusat/index.html
@@ -168,14 +168,14 @@
             <nav class="flex mb-4 md:mb-6 overflow-x-auto" aria-label="Breadcrumb">
                 <ol class="inline-flex items-center space-x-1 md:space-x-3">
                     <li class="inline-flex items-center">
-                        <a href="#"
+                        <a href="./index.html"
                             class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-indigo-600">
                             <svg class="w-4 h-4 mr-2" fill="currentColor" viewBox="0 0 20 20">
                                 <path
                                     d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z">
                                 </path>
                             </svg>
-                            Home
+                            Dashboard
                         </a>
                     </li>
                 </ol>
